add the extra assignment

--- a/index.html
+++ b/index.html
@@ -1,9 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Google</title>
+    <style>
+        *{
+            margin: 0px;
+            padding: 0px;
+        }
+        .h1{
+            text-align: center;
+        }
+        .head{
+            background-color:blue ;
+        }
+        .sec1link{
+            color: aliceblue;
+            text-align: center;
+        }
+        .sec1align{
+            text-align: center;
+        }
+        .sec2link{
+            color: rgb(234, 51, 69);
+            background-color: aquamarine;
+        }
+        .space{
+            padding-top: 10px;
+            border: solid 2px palegoldenrod;
+        }
+    </style>
+    <title>Document</title>
 </head>
 <body>
-    <h1>File 1 </h1>
+    <div class="head"> <h1 class="h1">Aman Nagal</h1>
+        <div class="sec1align">
+        <a class="sec1link" href="">About</a>
+        <a class="sec1link"href="">Qualification</a>
+        <a class="sec1link"href="">Skills</a>
+        <a class="sec1link" href="">Experince</a>
+        <a class="sec1link" href=""> Project</a>
+    </div>
+    </div>
+    <div class="sec2">
+        <div class="sec2link">
+        <a class="sec2link" href="">Skills</a>
+        <a class="sec2link"href="">Experince</a>
+        <a class="sec2link"href=""> Project</a>
+        </div>
+        <div>
+            <img src="Aman.jpeg" alt="" width="200">
+        </div>
+        <div class="space" > <q> About Me</div></q>
+        <p class="space">At a time where multiple mediums have opened up in showbiz, Barkha Singh is only making the most of it. The actress who’s explored worked in television shows, films and web says she’s only enjoying the fact that she is getting to do what she loves to do the most.</p>
+    </div>
 </body>
 </html>
